[package]
name = "ssh-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
base64 = "0.22.1"
tokio = { version = "1.36", features = ["full"] }
openssh = "0.11.5"
rsa = "0.9"
rand = "0.9.1"
sha2 = "0.10"
tiny_http = "0.12.0"
ssh2 = "0.9.5"
directories = "6.0.0"
anyhow = "1.0.98"
thiserror = "2.0.12"
ureq = "2.9"
tempfile = "3.20.0"
which = "8.0.0"
